--- a/public/assets/css/footerstyle.css
+++ b/public/assets/css/footerstyle.css
@@ -1,5 +1,6 @@
 .gensys-footer {
     background-color: #91b7d1;
+    font-family: 'Inter', sans-serif !important;
     padding: 20px 0;
     position: relative;
     bottom: 0;
