--- a/public/assets/css/homestyle.css
+++ b/public/assets/css/homestyle.css
@@ -7,7 +7,7 @@
 }
 
 .custom-navbar {
-    background: linear-gradient(to bottom, #91B7D1 100%, #FAF7E5 0%); 
+    background: linear-gradient(to bottom, #91B7D1 100%, #faeeaa 100%); 
     padding: 15px 40px;
     display: flex;
     align-items: center;
