added community hub section

--- a/public/assets/css/announcementstyle.css
+++ b/public/assets/css/announcementstyle.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 * {
-    font-family: 'Inter', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 /* Navbar Styling */
@@ -288,3 +288,8 @@
         margin-bottom: 4px;
     }
 }
+
+
+
+
+
