--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,6 +1,6 @@
 body {
     background: linear-gradient(to bottom, #FAF7E5 0%, #91B7D1 90%); 
-    font-family: 'Inter', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
 }
 .mission-section {
     display: flex;
@@ -58,4 +58,51 @@ body {
     color: #F9D773;
     font-weight: bold;
     font-size: 24px;
+}
+  /* Loader */
+  #loader {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #FAF7E5 0%, #91B7D1 90%); 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.svg-loader {
+    width: 80px; /* Adjust the size as needed */
+    height: auto;
+}
+
+/* Initially Hide Content */
+#content {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+.about-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 60px;
+    margin-bottom: 40px;
+}
+.about-text {
+    margin-top: 20px;
+    max-width: 800px;
+}
+.about-text h2 {
+    font-size: 2.5rem;
+    color: #333;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+.about-text p {
+    font-size: 1.2rem;
+    color: #555;
+    line-height: 1.6;
 }
